--- a/views/about.pug
+++ b/views/about.pug
@@ -1,10 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  p Accesează informații privind contribualul.
-  p Salvează informații privind contribualul în local storage sau bază de date (de implementat)
-  p Generează E-Factura în format 
-    i xml
-  p Licență GPL
+    h1= title
+    p Invoice overview #{title}
+    p Generare furnizor/client
+    p Generare factură 
+        i XML
+    p Licență GPL
