--- a/views/index.pug
+++ b/views/index.pug
@@ -1,13 +1,16 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
-  p Caută vânzător:
-  form(action="/", method="post")
-    label(for="input") Introdu codul fiscal: 
-    input(type="text", id="input", name="codfiscal", required)
-    input(type="submit", value="Submit")
+    script(type='text/javascript', src='/public/javascripts/localstorage.js')
+    h1= title
+    p Privire generală #{title}
+    p Facturi:
+    form(action="/", method="post")
+        label(for="input") Selectează client: 
+    select
+        each variable in [codurifiscale]
+            option(value=variable) #{variable}
+        input(type="submit", value="Submit")
 
-  p Codul fiscal căutat: 
-    i #{codfiscal}
+    p Codul fiscal căutat: 
+        i #{codurifiscale}
