--- a/views/info.pug
+++ b/views/info.pug
@@ -1,12 +1,13 @@
 extends layout
 
 block content
+  script(type='text/javascript', src='public/javascripts/localstorage.js')
   h1= title
-  p Caută vânzător:
+  p Search vendor in ANAF database:
   form(action="/", method="post")
-    label(for="input") Introdu codul fiscal: 
+    label(for="input") Enter tax code: 
     input(type="text", id="input", name="codfiscal", required)
     input(type="submit", value="Submit")
 
   p Codul fiscal căutat: 
-    i #{codfiscal}
+    i #{datefirma}
