--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,8 +1,105 @@
 nav.navbar
  ul.navbar-nav
     li.nav-item
-      a.nav-link(href='/') Home
+      a.nav-link(href='/') Privire de ansamblu
     li.nav-item
-      a.nav-link(href='/info') Info TVA
+      a.nav-link(href='/generatevb') Generare furnizor/client
     li.nav-item
-      a.nav-link(href='/about') About
+      a.nav-link(href='/generatexml') Generare factură XML
+    li.nav-item
+      a.nav-link(href='/about') Despre
+    //-   a.nav-link(href='/about') About
+    //-   a.nav-link(href='/about') About
+    //- li.dropdown
+    //-   ul.dropdown-menu
+    //-    li: a(href='#') Action
+    //-    li: a(href='#') Another action
+
+//- nav
+//-   ul
+//-     li: a(href='#') Home
+//-     li: a(href='#') About
+//-     li: a(href='#') Contact
+//-     li: a(href='#')
+//-       | Points
+//-       span.badge.badge-important 4
+//-     li.dropdown
+//-       a.dropdown-toggle(href='#', role='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+//-         | Dropdown
+//-         span.caret
+//-       ul.dropdown-menu
+//-         li: a(href='#') Action
+//-         li: a(href='#') Another action
+//-         li: a(href='#') Something else here
+//-         li.divider
+//-         li.dropdown-header Nav header
+//-         li: a(href='#') Separated link
+//-         li: a(href='#') One more separated link
+
+//- <style>
+//- ul {
+//-   list-style-type: none;
+//-   margin: 0;
+//-   padding: 0;
+//-   overflow: hidden;
+//-   background-color: #333;
+//- }
+
+//- li {
+//-   float: left;
+//- }
+
+//- li a, .dropbtn {
+//-   display: inline-block;
+//-   color: white;
+//-   text-align: center;
+//-   padding: 14px 16px;
+//-   text-decoration: none;
+//- }
+
+//- li a:hover, .dropdown:hover .dropbtn {
+//-   background-color: red;
+//- }
+
+//- li.dropdown {
+//-   display: inline-block;
+//- }
+
+//- .dropdown-content {
+//-   display: none;
+//-   position: absolute;
+//-   background-color: #f9f9f9;
+//-   min-width: 160px;
+//-   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+//-   z-index: 1;
+//- }
+
+//- .dropdown-content a {
+//-   color: black;
+//-   padding: 12px 16px;
+//-   text-decoration: none;
+//-   display: block;
+//-   text-align: left;
+//- }
+
+//- .dropdown-content a:hover {background-color: #f1f1f1;}
+
+//- .dropdown:hover .dropdown-content {
+//-   display: block;
+//- }
+//- </style>
+//- </head>
+//- <body>
+
+//- <ul>
+//-   <li><a href="#home">Home</a></li>
+//-   <li><a href="#news">News</a></li>
+//-   <li class="dropdown">
+//-     <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+//-     <div class="dropdown-content">
+//-       <a href="#">Link 1</a>
+//-       <a href="#">Link 2</a>
+//-       <a href="#">Link 3</a>
+//-     </div>
+//-   </li>
+//- </ul>
