--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -1,13 +1,16 @@
 nav.navbar
- ul.navbar-nav
-    li.nav-item
-      a.nav-link(href='/') Privire de ansamblu
-    li.nav-item
-      a.nav-link(href='/generatevb') Generare furnizor/client
-    li.nav-item
-      a.nav-link(href='/generatexml') Generare factură XML
-    li.nav-item
-      a.nav-link(href='/about') Despre
+    ul.navbar-nav
+        li.nav-item
+            a.nav-link(href='/') Privire de ansamblu
+        li.nav-item
+            a.nav-link(href='/generatevb') Generare furnizor/client
+        li.nav-item
+            a.nav-link(href='/generatexml') Generare factură XML
+        li.nav-item
+            a.nav-link(href='/about') Despre
+        li
+            h3.title= title
+
     //-   a.nav-link(href='/about') About
     //-   a.nav-link(href='/about') About
     //- li.dropdown
