--- a/views/about.pug
+++ b/views/about.pug
@@ -1,10 +1,19 @@
 extends layout
 
 block content
-    h1= title
-    p Privire generală #{title}
-    p Generare furnizor/client
-    p Generare factură 
-        i XML
-    p Licență GPL.
+    p.message #{message}
+    details
+        summary Pagini
+        p Privire generală #{title}
+        p Generare furnizor/client
+        p Generare factură
+            i XML
+        p Despre
+    details
+        summary Dependențe principale
+        <p> NodeJS, Express, Mongoose, Pug
+    details
+        summary Schemă Mongoose
+        pre= JSON.stringify(vendorschema, null, 2)
     p #{credentials}
+    p Licență GPL.
