Updated mongoose schema and added comments.

--- a/views/about.pug
+++ b/views/about.pug
@@ -4,11 +4,11 @@ block content
     p.message #{message}
     details
         summary Pagini
-        p Privire generală #{title}
+        p Privire generală 
         p Generare furnizor/client
-        p Generare factură
+        p Generare factură 
             i XML
-        p Despre
+        p #{title}
     details
         summary Dependențe principale
         <p> NodeJS, Express, Mongoose, Pug
