--- a/views/fetchtva.pug
+++ b/views/fetchtva.pug
@@ -72,7 +72,7 @@ block content
                     label(for="comments") Comentarii: 
                     input(type="text", id="comments" name="comments" placeholder="Comentarii" title="Comentarii")
                 label(for="radiovendor") Furnizor 
-                input(type='radio', id='radiovendor' name='vb', value ='vendor')
+                input(type='radio', id='radiovendor' name='vb', value ='vendor' checked)
                 label(for="radiobuyer") Client 
                 input(type='radio', id='radiobuyer' name='vb', value ='buyer')
                 select(id="selectvendorclient" name="vendorclient" title="Creare sau modificare")
